# Bank_to_ledger_reconciliation

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  testing2.ipynb
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: decisions.py  health.py  imports.py  metrics.py  reconciliation.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/matching/: test_similarity.py
backend/app/matching/assignment/: solver.py
backend/app/matching/candidate_generation/: blocking.py  candidate_service.py
backend/app/matching/common/: accessors.py
backend/app/matching/features/: feature_builder.py  similarity.py
backend/app/matching/scoring/: guardrails.py  rule_score.py
backend/app/models/: __init__.py  bank_transaction.py  candidate_feature.py  decision_audit_log.py  match_candidate.py  match_decision.py  payment_record.py  raw_import_file.py  reconciliation_run.py
backend/app/schemas/: decisions.py  health.py  imports.py  metrics.py  reconciliation.py
backend/app/services/decisions/: decision_service.py
backend/synthetic_data/: bank_transactions.py  customers.py  export.py  generator_config.py  invoices.py  main.py  noise_injection.py  payments.py  truth_builder.py  validation.py  validation_report.py
backend/tests/: test_blocking.py  test_candidate_service.py  test_decision_routes.py  test_festure_builder.py  test_guardrails.py  test_health.py  test_metrics_routes.py  test_reconciliation_routes.py  test_rule_score.py  test_solver.py
scripts/: backend-dev.sh  (+2 more)
(+21 files in other folders)
