[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-to-ledger-reconciliation-backend"
version = "0.1.0"
description = "FastAPI backend for bank-to-ledger reconciliation platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.4.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pandas>=3.0.1",
    "python-multipart>=0.0.9"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]